# IndiByte

./: .gitignore  API_Documentation.md  Community_Guidelines.md  Contributor_Guidelines.md  Database_Schema.md  FAQ.md  Gen UI.md  IndiByte_PRD.md  Licence.md  Project_IndiByte_Structured.md  QWEN.md  README.md  Technical_Architecture.md  main.py  process_tts.py  pyproject.toml  requirements.txt  userguide.md
.obsidian/: community-plugins.json  graph.json  workspace.json
Bytelense/: BACKEND_IMPLEMENTATION_CHECKLIST.md  BACKEND_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  QWEN_FRONTEND_PROMPT.md  QWEN_PHASE_7_BUILD_UI.md  QWEN_START_MESSAGE.md  ReadMe.md  TELL_QWEN_THIS.md  VALIDATION_RESULTS.md
Bytelense/backend/: .env  .env.example  README.md  test_user.json
Bytelense/docs/: HLD.md  LLD.md  LLD_PART2.md  LLD_PART3.md  PRD.md
Bytelense/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
docs/: Community_Guidelines.md  Contributor_Guidelines.md  Database_Schema.md  IndiByte_PRD.md  Project_IndiByte_Structured.md  Technical_Architecture.md
docs/sources/: AI_in_Nutrition_and_Dietetics_Review.md  API_Design_Patterns_Nutrition_Health_Data.md  API_Documentation_Research_Summary.md  Database_Architecture_Nutrition_Information_Systems.md  Economic_Aspects_Indian_Dietary_Patterns.md  README.md  SUMMARY.md  (+48 more)
media/: MEDIA_INDEX.md  complete_script.md  indibyte_tts_script.md  indibyte_tts_script_clean.md  indibyte_tts_script_clean_with_emotions.md  indibyte_tts_script_with_emotions.md
(+91 files in other folders)
